--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">MyAlgia</string>
+
+    <string name="title_home">Home</string>
+    <string name="title_history">History</string>
+
     <string name="button_weather_fetch">Fetch weather</string>
     <string name="text_weather_error_not_found">Weather not found</string>
 </resources>
