--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,14 @@
 
     <string name="weather_button">Fetch weather</string>
     <string name="weather_error">Weather error</string>
+
+    <string name="event_addition">Add %1$s</string>
+    <string name="event_name_social">Social event</string>
+
+    <string name="event_duration_hint">Duration (minutes)</string>
+    <string name="event_description_hint">Description</string>
+
+
+    <string name="menu_settings">Settings</string>
+    <string name="menu_save">Save</string>
 </resources>
